--- a/timerindex.html
+++ b/timerindex.html
@@ -28,5 +28,7 @@
     <button class="calc remove">&#8722;</button>
 
     <script src="timerscript.js"></script>
+
+    <!--this is just simple text for git commands-->
   </body>
 </html>
